Archive2/43/23d1a034df427f/output
main.cpp:8:30: error: non-aggregate type 'std::vector<std::string>' cannot be initialized with an initializer list
    std::vector<std::string> stringvec = {"hello", "Alan"};
                             ^           ~~~~~~~~~~~~~~~~~
main.cpp:10:10: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    for (auto it: stringvec)
         ^
main.cpp:10:17: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for (auto it: stringvec)
                ^
main.cpp:14:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
3 warnings and 1 error generated.
